YT Logo on Firefox fix
- Added max width and height to try to fix wrong size in firefox

--- a/style.css
+++ b/style.css
@@ -101,9 +101,14 @@ p {
   width: 50px;
 }
 
-img[alt="LinkedIn Logo"], img[alt="GitHub Logo"], img[alt="YouTube Logo"] {
+img[alt="LinkedIn Logo"],
+img[alt="GitHub Logo"],
+img[alt="YouTube Logo"] {
   width: 50px;
   height: 50px;
+  max-width: 50px;
+  max-height: 50;
+  object-fit: contain;
 }
 
 img[alt="Mail Icon"] {
